hphp/hack/test/typecheck/let/let_try_catch_finally.php.exp
File "let_try_catch_finally.php", line 9, characters 10-17:
Unbound name: catch_me (a global constant) (Naming[2049])
